; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_write_immediate_stats_to_pipe.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_write_immediate_stats_to_pipe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@master_pipe_fast_write = common dso_local global i32 0, align 4
@RPC_PHP_IMMEDIATE_STATS = common dso_local global i32 0, align 4
@immediate_stats = common dso_local global i32 0, align 4
@pipe_fast_packet_id = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"error [%d] during write to pipe\00", align 1
@errno = common dso_local global i32 0, align 4
@QSIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_immediate_stats_to_pipe() #0 {
  %1 = alloca [28 x i32], align 16
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @master_pipe_fast_write, align 4
  %5 = icmp ne i32 %4, -1
  br i1 %5, label %6, label %34

6:                                                ; preds = %0
  store i32 28, i32* %2, align 4
  %7 = getelementptr inbounds [28 x i32], [28 x i32]* %1, i64 0, i64 0
  %8 = load i32, i32* %2, align 4
  %9 = sext i32 %8 to i64
  %10 = call i32 @memset(i32* %7, i32 0, i64 %9)
  %11 = load i32, i32* @RPC_PHP_IMMEDIATE_STATS, align 4
  %12 = getelementptr inbounds [28 x i32], [28 x i32]* %1, i64 0, i64 2
  store i32 %11, i32* %12, align 8
  %13 = getelementptr inbounds [28 x i32], [28 x i32]* %1, i64 0, i64 0
  %14 = getelementptr inbounds i32, i32* %13, i64 3
  %15 = call i32 @memcpy(i32* %14, i32* @immediate_stats, i32 4)
  %16 = load i32, i32* @pipe_fast_packet_id, align 4
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* @pipe_fast_packet_id, align 4
  %18 = getelementptr inbounds [28 x i32], [28 x i32]* %1, i64 0, i64 0
  %19 = load i32, i32* %2, align 4
  %20 = call i32 @prepare_rpc_query_raw(i32 %16, i32* %18, i32 %19)
  %21 = load i32, i32* @master_pipe_fast_write, align 4
  %22 = getelementptr inbounds [28 x i32], [28 x i32]* %1, i64 0, i64 0
  %23 = load i32, i32* %2, align 4
  %24 = sext i32 %23 to i64
  %25 = call i64 @write(i32 %21, i32* %22, i64 %24)
  %26 = trunc i64 %25 to i32
  store i32 %26, i32* %3, align 4
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* %2, align 4
  %29 = icmp eq i32 %27, %28
  %30 = zext i1 %29 to i32
  %31 = load i32, i32* @errno, align 4
  %32 = call i32 @dl_pstr(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0), i32 %31)
  %33 = call i32 @dl_passert(i32 %30, i32 %32)
  br label %34

34:                                               ; preds = %6, %0
  ret void
}

declare dso_local i32 @memset(i32*, i32, i64) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1

declare dso_local i32 @prepare_rpc_query_raw(i32, i32*, i32) #1

declare dso_local i64 @write(i32, i32*, i64) #1

declare dso_local i32 @dl_passert(i32, i32) #1

declare dso_local i32 @dl_pstr(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
